# Verbose

./: .gitignore  README.md  flake.nix  pyproject.toml
src/: main.py
